# python-project-lvl3

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: PyCI.yml  PyCl.yml
page_loader/: 1.py  __init__.py  arg_parser.py  cli.py  files_and_dirs.py  for_http.py  http.py  name_generator.py  page_output.py  page_parser.py  progress_bar.py  resources_output.py  urlib_and_bs.py  urls_and_bs.py  work_with_files.py
page_loader/aux/: custom_exceptions.py  logs_config.py  print_message.py
page_loader/logs/: logs_config.py
page_loader/scripts/: page_loader.py  page_loader_script.py
page_loader/tests/: test_download.py  test_download_resources.py  test_downloading.py  test_get_files.py  test_script.py
page_loader/tests/fixtures/: before1.html  before3.html  fixtures.py  one_png.html
tests/: test_download_main_func.py  test_download_page.py  test_download_resources.py  test_downloading.py  test_message.py  test_requests.py  test_script.py  test_work_for_files.py
tests/fixtures/: for_fixtures.py  one_png_after.html  stubs_and_fixt.py
