[tool.poetry]
name = "hexlet-code"
version = "1"
description = "the page loader"
authors = ["Polina Ikonnikova <spollyv@gmail.com>"]
packages = [
  { include = "page_loader" },
]
repository = "https://github.com/PolinaIkonnikova/python-project-lvl3.git"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
requests-mock = "^1.9.3"
pytest = "^7.1.2"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
